--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tests/test.js"
+    "test": "tests/test.js",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,14 @@
     "circomlibjs": "^0.1.7",
     "crypto": "^1.0.1",
     "eth-crypto": "^2.6.0",
-    "ethers": "5.7",
+    "ethers": "^5.7.2",
     "snarkjs": "^0.7.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.17",
+    "@babel/preset-env": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
